--- a/Neural_Network_Example.ipynb
+++ b/Neural_Network_Example.ipynb
@@ -6,7 +6,7 @@
       "name": "Neural Network Example.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXzxOKNPU+abLrudu2Lbcm",
+      "authorship_tag": "ABX9TyMYd+Sp5YVs2xJSaweRnhrp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -522,196 +522,196 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "8d89573a-ae02-4e2d-eb40-2c746029cd49"
+        "outputId": "3a4a7a7b-06c3-4cc2-c2f0-a85e60fae35c"
       },
       "source": [
-        "predicted_y = classifier.predict(test_X)\n",
+        "predicted_y = classifier.predict_classes(test_X)\n",
         "\n",
         "predicted_y"
       ],
-      "execution_count": 42,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.9133623 ],\n",
-              "       [0.09021378],\n",
-              "       [0.0901362 ],\n",
-              "       [0.11452958],\n",
-              "       [0.9148387 ],\n",
-              "       [0.9153043 ],\n",
-              "       [0.91544676],\n",
-              "       [0.9050414 ],\n",
-              "       [0.0929822 ],\n",
-              "       [0.0961045 ],\n",
-              "       [0.91230977],\n",
-              "       [0.09142098],\n",
-              "       [0.89513946],\n",
-              "       [0.09013778],\n",
-              "       [0.09020218],\n",
-              "       [0.9114592 ],\n",
-              "       [0.914337  ],\n",
-              "       [0.89475197],\n",
-              "       [0.0924038 ],\n",
-              "       [0.91342986],\n",
-              "       [0.9153681 ],\n",
-              "       [0.09213328],\n",
-              "       [0.2185852 ],\n",
-              "       [0.09466985],\n",
-              "       [0.91489124],\n",
-              "       [0.901627  ],\n",
-              "       [0.90394634],\n",
-              "       [0.8817177 ],\n",
-              "       [0.9100901 ],\n",
-              "       [0.91434973],\n",
-              "       [0.9113735 ],\n",
-              "       [0.9152595 ],\n",
-              "       [0.09013882],\n",
-              "       [0.9117696 ],\n",
-              "       [0.90977347],\n",
-              "       [0.09052965],\n",
-              "       [0.91476595],\n",
-              "       [0.9153544 ],\n",
-              "       [0.8402637 ],\n",
-              "       [0.41771162],\n",
-              "       [0.91463447],\n",
-              "       [0.8636231 ],\n",
-              "       [0.09543765],\n",
-              "       [0.9150587 ],\n",
-              "       [0.8894727 ],\n",
-              "       [0.10491225],\n",
-              "       [0.09028575],\n",
-              "       [0.09015542],\n",
-              "       [0.6015867 ],\n",
-              "       [0.9144212 ],\n",
-              "       [0.9154218 ],\n",
-              "       [0.9145971 ],\n",
-              "       [0.8960309 ],\n",
-              "       [0.9154194 ],\n",
-              "       [0.9141941 ],\n",
-              "       [0.91423285],\n",
-              "       [0.9146875 ],\n",
-              "       [0.91492474],\n",
-              "       [0.9154331 ],\n",
-              "       [0.9131513 ],\n",
-              "       [0.91398716],\n",
-              "       [0.09014618],\n",
-              "       [0.09013882],\n",
-              "       [0.91537714],\n",
-              "       [0.57759   ],\n",
-              "       [0.75444293],\n",
-              "       [0.09013632],\n",
-              "       [0.9151504 ],\n",
-              "       [0.09013617],\n",
-              "       [0.9115272 ],\n",
-              "       [0.9153985 ],\n",
-              "       [0.09082621],\n",
-              "       [0.6195455 ],\n",
-              "       [0.9148939 ],\n",
-              "       [0.91473866],\n",
-              "       [0.10694557],\n",
-              "       [0.9154203 ],\n",
-              "       [0.9129051 ],\n",
-              "       [0.09026188],\n",
-              "       [0.91501594],\n",
-              "       [0.09036979],\n",
-              "       [0.907826  ],\n",
-              "       [0.10296941],\n",
-              "       [0.09108189],\n",
-              "       [0.09775823],\n",
-              "       [0.09014356],\n",
-              "       [0.9137256 ],\n",
-              "       [0.09015027],\n",
-              "       [0.3131699 ],\n",
-              "       [0.91529334],\n",
-              "       [0.91540253],\n",
-              "       [0.9127004 ],\n",
-              "       [0.91452944],\n",
-              "       [0.09013811],\n",
-              "       [0.09015158],\n",
-              "       [0.9151728 ],\n",
-              "       [0.9154033 ],\n",
-              "       [0.0919579 ],\n",
-              "       [0.91539705],\n",
-              "       [0.9154214 ],\n",
-              "       [0.09016332],\n",
-              "       [0.9149206 ],\n",
-              "       [0.09015933],\n",
-              "       [0.09015146],\n",
-              "       [0.9150194 ],\n",
-              "       [0.91396165],\n",
-              "       [0.09013915],\n",
-              "       [0.09013617],\n",
-              "       [0.91501117],\n",
-              "       [0.89045763],\n",
-              "       [0.9132143 ],\n",
-              "       [0.9150418 ],\n",
-              "       [0.91541374],\n",
-              "       [0.09205428],\n",
-              "       [0.91462636],\n",
-              "       [0.9152822 ],\n",
-              "       [0.91544515],\n",
-              "       [0.91540277],\n",
-              "       [0.9153596 ],\n",
-              "       [0.09077328],\n",
-              "       [0.91518605],\n",
-              "       [0.09025431],\n",
-              "       [0.9149337 ],\n",
-              "       [0.09115675],\n",
-              "       [0.9153667 ],\n",
-              "       [0.9119339 ],\n",
-              "       [0.9152905 ],\n",
-              "       [0.09019214],\n",
-              "       [0.0969981 ],\n",
-              "       [0.28680825],\n",
-              "       [0.91378415],\n",
-              "       [0.9131475 ],\n",
-              "       [0.09553105],\n",
-              "       [0.09037942],\n",
-              "       [0.9149301 ],\n",
-              "       [0.91483295],\n",
-              "       [0.14945504],\n",
-              "       [0.21533677],\n",
-              "       [0.09054175],\n",
-              "       [0.89602256],\n",
-              "       [0.9085642 ],\n",
-              "       [0.9145957 ],\n",
-              "       [0.8892102 ],\n",
-              "       [0.9085237 ],\n",
-              "       [0.91525793],\n",
-              "       [0.9152019 ],\n",
-              "       [0.09015229],\n",
-              "       [0.09017053],\n",
-              "       [0.09020361],\n",
-              "       [0.9153886 ],\n",
-              "       [0.9151897 ],\n",
-              "       [0.91541815],\n",
-              "       [0.90829825],\n",
-              "       [0.91506696],\n",
-              "       [0.09265232],\n",
-              "       [0.09158847],\n",
-              "       [0.9056933 ],\n",
-              "       [0.91533506],\n",
-              "       [0.91293216],\n",
-              "       [0.9118577 ],\n",
-              "       [0.90085566],\n",
-              "       [0.9153789 ],\n",
-              "       [0.9118613 ],\n",
-              "       [0.9149197 ],\n",
-              "       [0.91457915],\n",
-              "       [0.91492736],\n",
-              "       [0.9147872 ],\n",
-              "       [0.915374  ],\n",
-              "       [0.09013684],\n",
-              "       [0.91458935],\n",
-              "       [0.91445535]], dtype=float32)"
+              "array([[1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [1],\n",
+              "       [0],\n",
+              "       [1],\n",
+              "       [1]], dtype=int32)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 43
         }
       ]
     },
@@ -722,29 +722,28 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 346
+          "height": 35
         },
-        "outputId": "373f6a55-688d-41d9-aef9-f441849abe4c"
+        "outputId": "7ca2303c-6f3a-41bf-9f88-39efd11f8728"
       },
       "source": [
         "from sklearn.metrics import accuracy_score\n",
         "\n",
         "accuracy_score(predicted_y, test_y)"
       ],
-      "execution_count": 40,
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-40-820ea5d1b852>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredicted_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36maccuracy_score\u001b[0;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[1;32m    183\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    184\u001b[0m     \u001b[0;31m# Compute accuracy for each possible representation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 185\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    186\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'multilabel'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         raise ValueError(\"Classification metrics can't handle a mix of {0} \"\n\u001b[0;32m---> 90\u001b[0;31m                          \"and {1} targets\".format(type_true, type_pred))\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m     \u001b[0;31m# We can't have more than one value on y_type => The set is no more needed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Classification metrics can't handle a mix of continuous and binary targets"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9766081871345029"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
         }
       ]
     }
