--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -6,7 +6,7 @@
       "name": "MNIST.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM8etLqdws4ytSCkKf24Vd8",
+      "authorship_tag": "ABX9TyNSGmw6HtQ2DnDaA/6aRDJ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -244,6 +244,34 @@
             "tags": []
           },
           "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FPq4aJVyRqVK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "a3cc433e-0299-476e-d254-02ec66bb3f5e"
+      },
+      "source": [
+        "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
+        "print(' test_acc: ', test_acc, \"\\n\", 'test loss: ', test_loss)"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10000/10000 [==============================] - 0s 17us/step\n",
+            " test_acc:  0.9652000069618225 \n",
+            " test loss:  0.1290582473371178\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
